Version-control variables on TeamCity